@@ -4,6 +4,7 @@ i2c-tools CHANGES
 SVN
   decode-dimms: Fix DDR2 SDRAM module speed decoding
                 Update manufacturer IDs.
+                Don't print anything by default if checksum fails
   decode-vaio: Private data might not be readable by non-root users
                Print the asset tag
                Fix the timestamp decoding
